# absenteeism_bot

./: .env.db.example  .gitignore  docker-compose.yml
admin_panel/: .env.example  Dockerfile  pyproject.toml
admin_panel/absence/: admin.py  models.py
admin_panel/absence/migrations/: 0001_initial.py
admin_panel/admin_panel/: settings.py
admin_panel/fixtures/: role.json
admin_panel/template/admin/: absence_summary_change_list.html
bot/: Dockerfile  db.py  main.py  pyproject.toml  roles.py
bot/action/: common.py
bot/conf/: env.example
bot/crud/: absence.py  user.py
bot/crud/filters/: absence.py  user.py
bot/handlers/: admin.py  admin_employee.py  auth.py
bot/handlers/auth/: auth.py
bot/models/: __init__.py  absence.py  meta.py  office.py  role.py  user.py
bot/state/: admin.py  admin_employee.py  employee.py  worker.py
bot/template/: do_change_report.jinja2  loader.py  new_user_request.jinja2  report_absence.jinja2  to_start.jinja2  welcome.jinja2
bot/template/error/: unexpected_behaviour.jinja2  user_non_active.jinja2  user_not_found.jinja2
nginx/: nginx.conf
scripts/: schema.sql
scripts/postgres/: schema.sql
