[tool.poetry]
name = "absenteeism_bot"
version = "0.1.0"
description = ""
authors = ["@antoxi4", "@alexeymyakinin"]

[tool.poetry.dependencies]
aiogram = "2.19"
aiohttp = "3.8.1"
aioredis = "2.0.1"
asyncpg = "0.25.0"
Jinja2 = "3.0.3"
psycopg2-binary = "2.9.3"
pydantic = {extras = ["dotenv"], version = "1.9.0"}
python = "^3.10"
SQLAlchemy = "1.4.31"
openpyxl = "3.0.9"

[tool.poetry.dev-dependencies]
autoflake = "1.4"
black = "22.3.0"
flake8 = "4.0.1"
flake8-black = "0.3.2"
flake8-bugbear = "22.3.23"
flake8-coding = "1.3.2"
flake8-comprehensions = "3.8.0"
flake8-debugger = "4.0.0"
flake8-eradicate = "1.2.0"
flake8-executable = "2.1.1"
flake8-isort = "4.1.1"
flake8-logging-format = "0.6.0"
flake8-pie = "0.15.0"
flake8-pytest-style = "1.6.0"
flake8-quotes = "3.3.1"
flake8-simplify = "0.19.2"
isort = "5.10.1"

[tool.black]
line-length = 120
target-version = ["py310"]
skip-string-normalization = true
extend-exclude = ["utils", "external_integration"]

[tool.isort]
line_length = 120
combine_as_imports = true
order_by_type = true
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
